--- a/resources/scss/components/_menu-secondary.scss
+++ b/resources/scss/components/_menu-secondary.scss
@@ -1,19 +1,21 @@
 // Secondary Menu
 
 .menu--secondary {
-	  display: flex;
-	  flex-flow: row nowrap;
-	  justify-content: flex-end;
-	  padding: 0 $margin 0 0;
-	  align-items: center;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: flex-end;
+	padding: 0 ($margin* 2.5) 0 0;
+	align-items: center;
+	background-color: $nav-secondary-bg-color;
 
-	  @include mq(phone-only) {
-		border: none;
-		top: 4px;
-		padding: 0;
-	  }
+	// background-image: linear-gradient(180deg, #102440 0%, #162C4B 100%);
+	@include mq(phone-only) {
+		//border: none;
+		//top: 4px;
+		padding-right: $margin * 1.5;
+	}
 
-	  .menu__items {
+	.menu__items {
 		list-style: none;
 		display: flex;
 		margin: 0;
@@ -23,41 +25,41 @@
 		flex-direction: row;
 
 		@include mq(tablet-landscape-up) {
-		  padding-right: $margin * 0.5;
+			padding-right: $margin * 0.5;
 		}
 
 		@include mq(phone-only) {
-		  padding-right: $margin * 0.25;
+			padding-right: $margin * 0.25;
 		}
-	  }
+	}
 
-	  .menu__item {
-		@include font-size(11px);
-
+	.menu__item {
+		@include font-size(14px);
 		text-transform: uppercase;
-		margin-left: $margin * 0.5;
+		//margin-left: $margin * 0.5;
 
 		@include mq(phone-only) {
-		  margin-left: 10px;
+			//margin-left: 10px;
 		}
-	  }
+	}
 
-	  .menu__link {
-		color: $nav-text-color;
-		padding: ($margin * 0.5) ($margin * 0.5) ($margin * 0.5) 1rem;
-
-		.page-template-landing & {
-		  @include mq(desktop-nav) {
-			color: $white;
-		  }
+	.menu__link {
+		background-color: $nav-secondary-bg-color;
+		color: $nav-secondary-text-color;
+		padding: ($margin * .275) ($margin * 1);
+		display: block;
+		
+		@include mq(phone-only) {
+			padding: ($margin * .275) ($margin * .5);
 		}
 
 		&:hover {
-		  color: $blue-light;
+			background-color: $nav-secondary-bg-color-hover;
+			color: $nav-secondary-text-color-hover;
 		}
-	  }
-
-	  .wrap {
-		display: flex;
-	  }
 	}
+
+	.wrap {
+		display: flex;
+	}
+}
