--- a/resources/scss/tools/_functions.scss
+++ b/resources/scss/tools/_functions.scss
@@ -5,3 +5,11 @@
 /// @author Bryan Hoffman <bryan@spigotdesign.com>
 
 ////
+
+@use "sass:math";
+
+// Convert px value to rem
+@function convert($value) {
+	$remValue: (math.div($value, 16)) + rem; 
+	@return $remValue;
+}
