Changes from IPCRE project

--- a/resources/scss/components/__index.scss
+++ b/resources/scss/components/__index.scss
@@ -22,7 +22,6 @@
 @import "archive-header";
 @import "blog-main";
 @import "blog-sidebar";
-@import "buttons";
 @import "cards";
 @import "comments";
 @import "comment";
@@ -36,7 +35,7 @@
 @import "nav-pagination";
 @import "nav-toggle";
 @import "notices";
-@import "page-builder";
+// @import "page-builder";
 @import "page-head";
 @import "post-list";
 @import "post-nav";
