--- a/resources/scss/settings/_border.scss
+++ b/resources/scss/settings/_border.scss
@@ -1,11 +1,18 @@
 // Borders 
 
+// General borders
 $base-radius:       	3px;
 $border-radius: 		$base-radius;
 
+// Button borders
 $button-border-radius:  $base-radius;
-$button-border-width: 0;
+$button-border-width: 3px;
 $button-border-style: solid;
+
+// Nav button borders
+$nav-button-border-width: $button-border-width;
+
+
 
 
 // Pagination buttons
