--- a/resources/scss/components/_app-header.scss
+++ b/resources/scss/components/_app-header.scss
@@ -23,15 +23,16 @@
         flex-flow: row nowrap;
         align-items: center;
         justify-content: flex-start;
-
         flex: 0 1 $branding-width;
         //background-color: $blue-darker;
 
         @include mq(phone-only) {
-            flex-basis: 100%;
-            order: 2;
-            justify-content: flex-start;
-            padding-left: $margin * 0.5;
+            flex-basis: $branding-width-mobile;
+            width: $branding-width-mobile;
+            flex-direction: column;
+            padding: $margin * .25;
+            position: relative;
+            left: $margin * .5;
         }
 
         &-link {
@@ -49,13 +50,24 @@
                 width: $logo-width-mobile;
                 height: $logo-height-mobile;
                 transition: all .3s ease-in-out;
-                fill: $white;
+                fill: $blue-dark;
 
                 @include mq(tablet-portrait-up) {
                     width: $logo-width;
                     height: $logo-height;
                 }
 
+            }
+            
+            &-brokerage {
+                margin-left: $margin;
+                position: relative;
+                top: convert(4);
+                fill: $blue-dark;
+                
+                @include mq(phone-only) {
+                    top: -.5rem;
+                }
             }
         }
     }
