--- a/resources/scss/components/_page-head.scss
+++ b/resources/scss/components/_page-head.scss
@@ -4,7 +4,7 @@
     padding: ($margin * 2) 0 0 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    align-items: center;
     position: relative;
     overflow: hidden;
     z-index: 10;
@@ -16,6 +16,7 @@
         background-size: cover;
         background-position: center;
         padding-bottom: $margin * 2;
+        align-items: center;
 
         &:after {
             content: "";
@@ -32,7 +33,7 @@
     }
 
     &--no-bg {
-        padding: ($margin * 2.666666666666) 0 ($margin * 2) 0;
+        padding: ($margin * 2.66667) 0;
 
         @include mq(phone-only) {
             padding: $margin 0 ($margin * .5) 0;
@@ -61,7 +62,7 @@
 
     &__title {
         color: $white;
-        text-align: left;
+        text-align: center;
         margin-bottom: $margin;
         z-index: 10;
         @include font-size(56px);
@@ -82,7 +83,7 @@
        z-index: 2;
        display: flex;
        flex-direction: column;
-       align-items: flex-start;
+       align-items: center;
        max-width: $site-width;
        padding: 0 20px;
    
