--- a/resources/scss/settings/__index.scss
+++ b/resources/scss/settings/__index.scss
@@ -12,7 +12,7 @@
 @import "spacing";
 @import "colors";
 @import "dimensions";
-//@import 'fonts';
+@import 'fonts';
 @import "border";
 @import "type";
 @import "woocommerce";
