--- a/resources/scss/settings/_dimensions.scss
+++ b/resources/scss/settings/_dimensions.scss
@@ -23,7 +23,7 @@ $site-width:					$site-max-width;
 
 $post-width:					math.div(960, 16) * 1rem;
 
-$app-header-height:				math.div(100, 16) * 1rem;
+$app-header-height:				math.div(80, 16) * 1rem;
 $app-header-height-detatched:	math.div(125, 16) * 1rem;
 
 
@@ -33,15 +33,16 @@ $transition:					all .3s ease-in-out;
 
 
 // Logo dimensions
-$logo-width:            		math.div(372, 16) * 1rem;
-$logo-height:           		math.div(54, 16) * 1rem;
-$logo-width-mobile:     		math.div(264, 16) * 1rem;
-$logo-height-mobile:    		math.div(39, 16) * 1rem;
+$logo-width:            		math.div(244, 16) * 1rem;
+$logo-height:           		math.div(50, 16) * 1rem;
+$logo-width-mobile:     		math.div(244, 16) * 1rem;
+$logo-height-mobile:    		math.div(50, 16) * 1rem;
 $logo-width-detached:   		$logo-width;
 $logo-height-detached:  		$logo-height;
 
 $nav-width:						math.div(420, 16) * 1rem;
-$branding-width:				math.div(500, 16) * 1rem;
+$branding-width:				math.div(450, 16) * 1rem;
+$branding-width-mobile:			math.div(245, 16) * 1rem;
 
 
 @function content-width() {
