Search field on 404 page fix

--- a/resources/scss/components/__index.scss
+++ b/resources/scss/components/__index.scss
@@ -19,6 +19,7 @@
 @import "app-header_nav";
 @import "app-main";
 @import "app-search";
+@import "404-search";
 @import "archive-header";
 @import "blog-main";
 @import "blog-sidebar";
