Ripped out Webpack
In favor of simpler NPM scripts

--- a/resources/scss/blocks/core/image/_image.scss
+++ b/resources/scss/blocks/core/image/_image.scss
@@ -42,9 +42,21 @@
     }
   }
 
+  figure {
+    display: table;
+
+    &.aligncenter {
+      figcaption {
+        text-align: center;
+      }
+    }
+  }
+
   figcaption {
     padding: math.div($margin, 6);
     font-size: 90%;
     font-style: italic;
+    display:table-caption;
+    caption-side:bottom
   }
 }
