--- a/resources/scss/components/_app-header.scss
+++ b/resources/scss/components/_app-header.scss
@@ -6,7 +6,7 @@
     background-color: $header-background;
     height: $app-header-height;
     width: 100%;
-    position: relative;
+    position: absolute;
     top: 0;
     width: 100%;
     z-index: 1000;
@@ -16,7 +16,42 @@
     align-items: center;
     box-shadow: 0 0 4px 0 rgba($black, 0.17);
 
+    @include mq(mobile-nav) {
+        height: $app-header-height-mobile;
+    }
+
+    .invisible & {
+        @include mq(desktop-nav) {
+            transform: translate(0, -120px);
+            transition: transform 0.2s;
+            opacity: 0;
+        }
+    }
+
+    .detached & {
+        height: $app-header-height-mobile;
+
+        @include mq(desktop-nav) {
+            position: fixed;
+            transition: all .5s;
+            top: 0;
+            border-bottom: none;
+        }
+    }
+
     .admin-bar & {
+        top: 0;
+
+        @include mq(wpadmin-desktop) {
+            top: 0;
+        }
+
+        @include mq(phone-only) {
+            top: 0;
+        }
+    }
+
+    .admin-bar.detached & {
         top: 2.875em;
 
         @include mq(wpadmin-desktop) {
@@ -26,8 +61,12 @@
         @include mq(phone-only) {
             top: 0;
         }
+    }
 
-        
+    .expressbar-open.detached & {
+        @include mq(wpadmin-desktop) {
+            top: 4.5em;
+        }
     }
 
     &__branding {
@@ -40,10 +79,21 @@
         flex: 0 1 $branding-width;
         //background-color: $blue-darker;
 
-        @include mq(phone-only) {
+        .detached & {
+            .app-header__branding-link {
+                width: $logo-width-mobile;
+                height: $logo-height-mobile;
+
+                svg {
+                    width: $logo-width-mobile;
+                    height: $logo-height-mobile;
+                }
+            }
+        }
+
+        @include mq(mobile-nav) {
             flex-basis: $branding-width-mobile;
             width: $branding-width-mobile;
-            flex-direction: column;
             padding: $margin * .25;
             position: relative;
             left: $margin * .5;
@@ -54,7 +104,7 @@
             height: $logo-height-mobile;
 
 
-            @include mq(tablet-portrait-up) {
+            @include mq(tablet-landscape-up) {
                 width: $logo-width;
                 height: $logo-height;
                 padding-left: $margin * 0.5;
@@ -66,22 +116,11 @@
                 transition: all .3s ease-in-out;
                 fill: $blue-dark;
 
-                @include mq(tablet-portrait-up) {
+                @include mq(tablet-landscape-up) {
                     width: $logo-width;
                     height: $logo-height;
                 }
 
-            }
-            
-            &-brokerage {
-                margin-left: $margin;
-                position: relative;
-                top: convert(4);
-                fill: $blue-dark;
-                
-                @include mq(phone-only) {
-                    top: -.5rem;
-                }
             }
         }
     }
