--- a/resources/scss/settings/_dimensions.scss
+++ b/resources/scss/settings/_dimensions.scss
@@ -23,8 +23,8 @@ $site-width:					$site-max-width;
 
 $post-width:					math.div(960, 16) * 1rem;
 
-$app-header-height:				math.div(80, 16) * 1rem;
-$app-header-height-detatched:	math.div(125, 16) * 1rem;
+$app-header-height:				math.div(100, 16) * 1rem;
+$app-header-height-mobile:		$app-header-height * .75;
 
 
 
@@ -33,15 +33,15 @@ $transition:					all .3s ease-in-out;
 
 
 // Logo dimensions
-$logo-width:            		math.div(244, 16) * 1rem;
-$logo-height:           		math.div(50, 16) * 1rem;
-$logo-width-mobile:     		math.div(244, 16) * 1rem;
-$logo-height-mobile:    		math.div(50, 16) * 1rem;
+$logo-width:            		math.div(203, 16) * 1rem;
+$logo-height:           		math.div(70, 16) * 1rem;
+$logo-width-mobile:     		$logo-width * .75;
+$logo-height-mobile:    		$logo-height * .75;
 $logo-width-detached:   		$logo-width;
 $logo-height-detached:  		$logo-height;
 
-$nav-width:						math.div(420, 16) * 1rem;
-$branding-width:				math.div(450, 16) * 1rem;
+$nav-width:						math.div(420, 16) * 1rem; // Unused
+$branding-width:				math.div(220, 16) * 1rem;
 $branding-width-mobile:			math.div(245, 16) * 1rem;
 
 
