Margin below page head updated

--- a/resources/scss/components/_page-head.scss
+++ b/resources/scss/components/_page-head.scss
@@ -17,6 +17,7 @@
         background-position: center;
         padding-bottom: $margin * 2;
         align-items: center;
+        margin-bottom: $margin * 1.5;
 
         &:after {
             content: "";
