--- a/resources/scss/components/_menu-button.scss
+++ b/resources/scss/components/_menu-button.scss
@@ -2,6 +2,8 @@
 
 .menu {
   .menu__item.btn {
+    margin-left: $margin;
+
     .menu__link {
       background: $nav-btn-bg;
       color: $nav-btn-text-color;
@@ -19,6 +21,19 @@
         //box-shadow: 0px 0px 10px 0px rgba($blue-dark,0.5) inset;
         //text-shadow: 0 0 10px 0px rgba($blue-dark,0.5);
       }
+
+
     }
+
+    .nav-open & {
+      width:95%;
+      margin: 10px auto;
+      .menu__link {
+        background: $nav-btn-bg-hover;
+        text-align: center;
+      }
+    }
+
+
   }
 }
